@@ -1,6 +1,7 @@
 - Fix multiple GUIs not working correctly
 - When specifiying X, Y position when rendering the main layout, will now update correctly
   and also not use the margin system for it internally anymore.
+- Removed Button debug rendering for clickable area, since it's pretty much useless anyway, just set debug on the containing Layout
 
 v0.2.0:
 - Images now support the @click attribute to basically create an ImageButton
